Plugin Assignment Previews Version: 1.0.0

--- a/language/en-GB/en-GB.plg_system_assignmentpreviews.ini
+++ b/language/en-GB/en-GB.plg_system_assignmentpreviews.ini
@@ -1,10 +1,21 @@
 PLG_SYSTEM_ASSIGNMENTPREVIEWS_NAME="Assignment Previews"
-PLG_SYSTEM_ASSIGNMENTPREVIEWS_DESCRIPTION="<div style="_QQ_""_QQ_" ></div><div style="_QQ_""_QQ_" ><p>Shows preview of the assigned pages in module backend.<br>Powered by: <img src="_QQ_"/plugins/system/assignedpreview/w3st-logo-text.jpg"_QQ_" style="_QQ_"height:28px;width:auto;vertical-align:middle;"_QQ_"></p></div>"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_DESCRIPTION="<div style="_QQ_""_QQ_" ></div><div style="_QQ_""_QQ_" ><br><p>'Shows frontend previews of the assigned pages in the module backend.<p></p>Powered by:<p></p><a href="_QQ_"https://w3smart-tools.com"_QQ_" target="_QQ_"_blank"_QQ_"><img src="_QQ_"/plugins/system/assignmentpreviews/w3st-logo-text.jpg"_QQ_" style="_QQ_"height:32px;width:auto;vertical-align:middle;"_QQ_"></a></p></div>"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_POWERED_BY_W3ST="<div style="_QQ_""_QQ_"></div><div style="_QQ_""_QQ_" ><br>Powered by:<p></p><a href="_QQ_"https://w3smart-tools.com"_QQ_" target="_QQ_"_blank"_QQ_"><img src="_QQ_"/plugins/system/assignmentpreviews/w3st-logo-text.jpg"_QQ_" style="_QQ_"height:32px;width:auto;vertical-align:middle;"_QQ_"></div></a><br>"
 PLG_SYSTEM_ASSIGNMENTPREVIEWS_LABEL="Assignment Previews:"
 PLG_SYSTEM_ASSIGNMENTPREVIEWS_DESC="Assignment Previews."
 PLG_SYSTEM_ASSIGNMENTPREVIEWS_FIELD="<div class="_QQ_"icon-eye"_QQ_" ></div>Assignment Previews"
-PLG_SYSTEM_ASSIGNMENTPREVIEWS_PAGES_ASSIGNED="Preview for Assigned Pages:"
-PLG_SYSTEM_ASSIGNMENTPREVIEWS_ALL_PAGES_ASSIGNED="All Pages are assigned."
-PLG_SYSTEM_ASSIGNMENTPREVIEWS_NO_ASSIGNMENTS="No Pages are assigned."
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_PAGES_ASSIGNED="<span style="_QQ_"font-weight:normal;"_QQ_">Preview for Assigned Pages:</span>"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_ALL_PAGES_ASSIGNED="<span style="_QQ_"font-weight:normal;"_QQ_">All Pages are assigned.</span>"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_NO_ASSIGNMENTS="<span style="_QQ_"font-weight:normal;"_QQ_">No Pages are assigned.</span>"
 PLG_SYSTEM_ASSIGNMENTPREVIEWS_MENUTYPE="Pages assigned to Menutype"
-PLG_SYSTEM_ASSIGNMENTPREVIEWS_UNPUBLISHED=" ( Menu Item is unpublished )"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_UNPUBLISHED="<span style= "_QQ_"background:orange;color:white;border-radius:3px;padding:5px;margin-left:5px;"_QQ_" >Unpublished</span>"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_SELECTMODE_ONSELECTED="( Assignment mode: Only on the pages selected. )"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_SELECTMODE_EXCEPTSELECTED="( Assignment mode: On all pages except those selected. )"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_FIELDSET_PLG_PARAMS_SETTINGS="Responsive Preview settings"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_DEVICE_WIDTH_CHANGE_LABEL="Modify Responsive width settings:"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_DEVICE_WIDTH_CHANGE_DESC="Modify Responsive width settings."
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_SPACER_PREV_SIZE="Responsive Preview size:"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_DEVICE_WIDTH_1_LABEL="Device width 1 [px]:"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_DEVICE_WIDTH_2_LABEL="Device width 2 [px]:"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_DEVICE_WIDTH_3_LABEL="Device width 3 [px]:"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_DEVICE_WIDTH_DESC="Set the preview width."
