--- a/language/en-GB/en-GB.plg_system_assignmentpreviews.sys.ini
+++ b/language/en-GB/en-GB.plg_system_assignmentpreviews.sys.ini
@@ -1,2 +1,2 @@
-PLG_SYSTEM_ASSIGNMENTPREVIEWS_NAME="Assign Previews"
-PLG_SYSTEM_ASSIGNMENTPREVIEWS_DESCRIPTION="<div style="_QQ_""_QQ_" ></div><div style="_QQ_""_QQ_" ><p>Shows preview of the assigned pages in module backend.<br><br><img src="_QQ_"/plugins/system/assignedpreview/w3st-logo-text.jpg"_QQ_" style="_QQ_"height:28px;width:auto;vertical-align:middle;"_QQ_"></p></
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_NAME="Assignment Previews"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_DESCRIPTION="<div style="_QQ_""_QQ_"></div><div style="_QQ_"font-weight:normal;"_QQ_" ><br><p>Assignment Previews shows a preview of the assigned pages in module backend.<p></p>Powered by:<p></p><a href="_QQ_"https://w3smart-tools.com"_QQ_" target="_QQ_"_blank"_QQ_"><img src="_QQ_"/plugins/system/assignmentpreviews/w3st-logo-text.jpg"_QQ_" style="_QQ_"height:32px;width:auto;vertical-align:middle;"_QQ_"></a></p></div>"
