Plugin Assignment Previews Version: 1.1.0 Compatible with J3 and J4

--- a/language/en-GB/en-GB.plg_system_assignmentpreviews.ini
+++ b/language/en-GB/en-GB.plg_system_assignmentpreviews.ini
@@ -9,8 +9,10 @@ PLG_SYSTEM_ASSIGNMENTPREVIEWS_ALL_PAGES_ASSIGNED="<span style="_QQ_"font-weight:
 PLG_SYSTEM_ASSIGNMENTPREVIEWS_NO_ASSIGNMENTS="<span style="_QQ_"font-weight:normal;"_QQ_">No Pages are assigned.</span>"
 PLG_SYSTEM_ASSIGNMENTPREVIEWS_MENUTYPE="Pages assigned to Menutype"
 PLG_SYSTEM_ASSIGNMENTPREVIEWS_UNPUBLISHED="<span style= "_QQ_"background:orange;color:white;border-radius:3px;padding:5px;margin-left:5px;"_QQ_" >Unpublished</span>"
-PLG_SYSTEM_ASSIGNMENTPREVIEWS_SELECTMODE_ONSELECTED="( Assignment mode: Only on the pages selected. )"
-PLG_SYSTEM_ASSIGNMENTPREVIEWS_SELECTMODE_EXCEPTSELECTED="( Assignment mode: On all pages except those selected. )"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_SELECTMODE_ONSELECTED="Assignment mode: Only on the pages selected."
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_SELECTMODE_EXCEPTSELECTED="Assignment mode: On all pages except those selected."
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_SELECTMODE_ALLPAGES="Assignment mode: On all pages."
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_SELECTMODE_NOPAGES="Assignment mode: No pages."
 PLG_SYSTEM_ASSIGNMENTPREVIEWS_FIELDSET_PLG_PARAMS_SETTINGS="Responsive Preview settings"
 PLG_SYSTEM_ASSIGNMENTPREVIEWS_DEVICE_WIDTH_CHANGE_LABEL="Modify Responsive width settings:"
 PLG_SYSTEM_ASSIGNMENTPREVIEWS_DEVICE_WIDTH_CHANGE_DESC="Modify Responsive width settings."
