Plugin Assignment Previews Version: 1.1.0 stable to JED OK Compatible with J3 and J4 Update server name to Assignment Previews ATTENTION NOT 1.1.1

--- a/language/en-GB/en-GB.plg_system_assignmentpreviews.ini
+++ b/language/en-GB/en-GB.plg_system_assignmentpreviews.ini
@@ -1,4 +1,4 @@
-PLG_SYSTEM_ASSIGNMENTPREVIEWS_NAME="Assignment Previews"
+PLG_SYSTEM_ASSIGNMENTPREVIEWS_NAME="System - Assignment Previews"
 PLG_SYSTEM_ASSIGNMENTPREVIEWS_DESCRIPTION="<div style="_QQ_""_QQ_" ></div><div style="_QQ_""_QQ_" ><br><p>'Shows frontend previews of the assigned pages in the module backend.<p></p>Powered by:<p></p><a href="_QQ_"https://w3smart-tools.com"_QQ_" target="_QQ_"_blank"_QQ_"><img src="_QQ_"/plugins/system/assignmentpreviews/w3st-logo-text.jpg"_QQ_" style="_QQ_"height:32px;width:auto;vertical-align:middle;"_QQ_"></a></p></div>"
 PLG_SYSTEM_ASSIGNMENTPREVIEWS_POWERED_BY_W3ST="<div style="_QQ_""_QQ_"></div><div style="_QQ_""_QQ_" ><br>Powered by:<p></p><a href="_QQ_"https://w3smart-tools.com"_QQ_" target="_QQ_"_blank"_QQ_"><img src="_QQ_"/plugins/system/assignmentpreviews/w3st-logo-text.jpg"_QQ_" style="_QQ_"height:32px;width:auto;vertical-align:middle;"_QQ_"></div></a><br>"
 PLG_SYSTEM_ASSIGNMENTPREVIEWS_LABEL="Assignment Previews:"
