--- a/release/release_notes
+++ b/release/release_notes
@@ -1,5 +1,5 @@
 v1.1.0
-- Joomla!4 alpha compatible ( bootstrap if major version >= 4 )
+- Joomla!4 alpha5 compatible ( bootstrap if major version >= 4 )
 - UI: Separate and fixwd link for 90%
 
 v1.1.1:
